<resources>
    <string name="app_name">Hopper</string>
    <string name="google_maps_api_key">AIzaSyBFCTfulTQU6k_gOurO4rvthCWO1jsFBh4</string>
    <string name="hopper">Hopper</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">--OR--</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in.</string>
    <string name="log_in">Log In</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account? Create account.</string>
    <string name="first_name">First Name</string>
    <string name="lastname">LastName</string>
</resources>
